[package]
name = "e2e"
version = "0.1.0"
publish = false
edition = "2018"

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
workspaces = { git = "https://github.com/near/workspaces-rs", rev="45b4f606fb3df2743e651a555650aab23b38bf88" }

near-sdk = "4.0.0-pre.3"
near-contract-standards = "4.0.0-pre.3"