[package]
name = "treasury"
version = "0.1.0"
authors = ["cron.cat", "@trevorjtclarke"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

#[dependencies]
#near-sdk = "3.1.0"
#near-contract-standards = "3.2.0"

[dependencies]
near-sdk = "4.0.0-pre.3"
#near-contract-standards = { git = "https://github.com/near/near-contract-standards", rev="" }
