[package]
name = "treasury"
version = "0.1.0"
authors = ["cron.cat", "@trevorjtclarke"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

#[dependencies]
#near-sdk = "4.0.0-pre.3"
#near-contract-standards = { git = "https://github.com/near/near-contract-standards", rev="" }

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
near-contract-standards = "4.0.0-pre.4"
hex = "0.4.2"
uint = { version = "0.8.3", default-features = false }

[dependencies.serde_with]
version = "1.4.0"